--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 
 /* Your CSS Code here. */
-table,th,td{
+table{
 	border:1px solid black;
 	border-collapse:collapse;
+}
+th,td{
+	border-style: ridge;
 }
